--- a/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/BlogsView/BlogsView.cshtml
@@ -4,7 +4,7 @@
 <div class="mat-card uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
 
     <div class="title gap-b">
-        <a href="#" class="dot-container">
+        <a href="/Blog" class="dot-container">
             <img src="~/st/v/dot.svg" alt="" class="dot" />
             <h3>اخبار</h3>
         </a>
