--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -100,7 +100,7 @@
                                         @if (item.TblColor.Sum(i => i.Count) > 0)
                                         {
                                             <span data-placement="top" data-toggle="tooltip" title="" data-original-title="صفر کردن کل موجودی">
-                                                <a onclick="deleteCountProduct(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="add-circle-outline"></a>
+                                                <a onclick="deleteCountProduct(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="refresh-circle-outline"></a>
                                             </span>
                                         }
                                     </td>
