--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -79,8 +79,8 @@
                 <div class="slider">
                     <ul class="img uk-slideshow-items" uk-lightbox="animation: slide">
                         <li>
-                            <a href="~/Images/ProductMain/@Model.MainImage">
-                                <img src="~/Images/ProductMain/@Model.MainImage" alt="" uk-cover>
+                            <a href="~/Images/ProductMain/thumb/@Model.MainImage">
+                                <img src="~/Images/ProductMain/thumb/@Model.MainImage" alt="" uk-cover>
                             </a>
                         </li>
                         @foreach (var item in Model.TblProductImageRel)
