--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -81,6 +81,8 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label>قیمت بعد از تخفیف</label>
+                        @*<input data-type='currency' class="form-control form-control-sm PriceInputDiscount" value="@Model.PriceAfterDiscount" placeholder="مثال : 1,000,000">
+                        <input type="hidden" asp-for="PriceAfterDiscount" />*@
                         <input asp-for="PriceAfterDiscount" class="form-control form-control-sm" placeholder="مثال : 1,000,000">
                         <span asp-validation-for="PriceAfterDiscount" class="text-danger"></span>
                     </div>
@@ -283,7 +285,14 @@
                 $(this).val("");
             }
         });
-
+        $(".PriceInputDiscount").change(function () {
+            var price = $(this).val().replaceAll(",", "");
+            if ($.isNumeric(price)) {
+                $("#PriceAfterDiscount").val($(this).val().replaceAll(",", ""));
+            } else {
+                $(this).val("");
+            }
+        });
         function RemoveImageGallery(imageId) {
             $("#overlay").fadeIn(300);
             $.post("/Admin/Product/RemoveAlbumImage/" + imageId, function (result) {
