--- a/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
@@ -19,14 +19,14 @@
                     {
                         <td class="uk-text-success">@item.Amount.ToString("#,0")</td>
                         <td class="uk-text-success">
-                            واریز
+                            (@item.Description)واریز
                         </td>
                     }
                     else
                     {
                         <td class="uk-text-danger">@item.Amount.ToString("#,0")</td>
                         <td class="uk-text-danger">
-                            برداشت
+                            (@item.Description) برداشت
                         </td>
                     }
                     <td>@item.Date.DateToShamsi()</td>
