--- a/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
@@ -19,13 +19,16 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label>درصد تخفیف</label>
-                <input asp-for="Discount" type="number" class="form-control form-control-sm" placeholder="مثال: 30">
+                @*<input type="number" class="form-control form-control-sm PriceInput" placeholder="مثال: 30">*@
+                <input type="text" class="form-control form-control-sm PriceInput" placeholder="مثال: 30" maxlength="2" required   data-type='currency' />
+                <input asp-for="Discount" type="hidden" class="ProductId" />
                 <span class="text-danger" asp-validation-for="Discount"></span>
             </div>
             <div class="form-group col-md-6">
                 <label>چند روز</label>
-                <input name="Till" required type="number" min="1" class="form-control form-control-sm" placeholder="مثال: 2">
-                <span class="text-danger"></span>
+                <input name="Till" required type="number" min="1" class="form-control form-control-sm" placeholder="مثال: 2" >
+                <span class="text-danger" asp-validation-for="ValidTill"></span>
+
             </div>
         </div>
     </div>
@@ -36,3 +39,12 @@
 
 <script src="~/Validate/jquery.validate.min.js"></script>
 <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
+
+
+<script src="~/js/Auto_Formatting_Currency.js"></script>
+<script>
+    $('.PriceInput').change(function () {
+        var price = $(this).val().replaceAll(',', "");
+        $('.ProductId').val(price);
+    })
+</script>
