--- a/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
@@ -29,7 +29,7 @@
                             (@item.Description) برداشت
                         </td>
                     }
-                    <td>@item.Date.DateToShamsi()</td>
+                    <td>@item.Date.AllToShamsi()</td>
                     <td>@item.Description</td>
                 </tr>
             }
