--- a/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
@@ -8,7 +8,7 @@
     @if (Context.Request.Query["ResetPass"].ToString() == "true")
     {
         <div class="uk-alert uk-alert-success">
-            <p class="help-block">رمز شما تغیر یافت</p>
+            <p class="help-block">رمز شما تغییر یافت</p>
         </div>
     }
     <div class="rowr">
