--- a/GhasreMobile/Views/Account/Login.cshtml
+++ b/GhasreMobile/Views/Account/Login.cshtml
@@ -25,7 +25,7 @@
     @if (Context.Request.Query["ChangePassword"].ToString() == "true")
     {
         <div class="uk-alert uk-alert-success">
-            <p class="help-block">رمز شما تغیر یافت می توانید وارد حساب خود شوید</p>
+            <p class="help-block">رمز شما تغییر یافت می توانید وارد حساب خود شوید</p>
         </div>
     }
     <h3 class="uk-margin-medium-bottom">
