edit album section

--- a/GhasreMobile/Views/Home/IndexNew.cshtml
+++ b/GhasreMobile/Views/Home/IndexNew.cshtml
@@ -987,25 +987,40 @@
         <span>آلبوم تصاویر و ویدیوها</span>
         <img src="~/st/v/dot.svg" />
     </div>
-    <div id="gallery" class="container-fluid">
-        <img src="~/Images/ProductAlbum/c4412c3d-602b-4b2c-a864-92cbff66d6ea.jpg" class="img-responsive">
-        <img src="~/Images/Slider/1c7ec538-865e-4d61-a662-202b56757f2d.jpg" class="img-responsive">
-        <img src="~/Images/NewIndex/slider.png" class="img-responsive">
-        <video class="vid" controls="controls">
-            <source src="~/Images/NewIndex/video-sample.mp4" type="video/mp4" />
-        </video>
-        <img src="~/Images/Slider/600d03c5-ea7e-406e-a4e3-ee1e5e8916ed.jpg" class="img-responsive">
-        <video class="vid" controls="controls">
-            <source src="~/Images/NewIndex/video-sample.mp4" type="video/mp4" />
-        </video>
-        <img src="~/Images/NewIndex/banner1.png" class="img-responsive">
-        <img src="~/Images/ProductMain/05cbeca2-0636-458e-915f-cebd80642d49.jpg" class="img-responsive">
-        <video class="vid" controls="controls">
-            <source src="~/Images/NewIndex/video-sample.mp4" type="video/mp4" />
-        </video>
-        <img src="~/Images/NewIndex/Banner.png" class="img-responsive">
-        <img src="~/Images/Slider/f01d649f-0c80-4dce-a512-fa4e13147e08.jpg" class="img-responsive">
-        <img src="~/Images/NewIndex/banner2.png" class="img-responsive">
+    <div uk-lightbox="animation: slide">
+        <div id="gallery" class="container-fluid">
+            <a href="~/Images/ProductAlbum/c4412c3d-602b-4b2c-a864-92cbff66d6ea.jpg" data-caption="عنوان دلخواه">
+                <img src="~/Images/ProductAlbum/c4412c3d-602b-4b2c-a864-92cbff66d6ea.jpg" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/banner1.png" data-caption="عنوان دلخواه">
+                <img src="~/Images/NewIndex/banner1.png" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/Banner.png" data-caption="عنوان دلخواه">
+                <img src="~/Images/NewIndex/Banner.png" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/video-sample.mp4" data-caption="عنوان دلخواه">
+                <video class="vid" controls="controls">
+                    <source src="~/Images/NewIndex/video-sample.mp4" type="video/mp4" />
+                </video>
+            </a>
+            <a href="~/Images/ProductAlbum/c4412c3d-602b-4b2c-a864-92cbff66d6ea.jpg" data-caption="عنوان دلخواه">
+                <img src="~/Images/ProductAlbum/c4412c3d-602b-4b2c-a864-92cbff66d6ea.jpg" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/banner2.png" data-caption="عنوان دلخواه">
+                <img src="~/Images/NewIndex/banner2.png" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/Banner.png" data-caption="عنوان دلخواه">
+                <img src="~/Images/NewIndex/Banner.png" class="img-responsive">
+            </a>
+            <a href="~/Images/NewIndex/video-sample.mp4" data-caption="عنوان دلخواه">
+                <video class="vid" controls="controls">
+                    <source src="~/Images/NewIndex/video-sample.mp4" type="video/mp4" />
+                </video>
+            </a>
+            <a href="~/Images/Slider/600d03c5-ea7e-406e-a4e3-ee1e5e8916ed.jpg" data-caption="عنوان دلخواه">
+                <img src="~/Images/Slider/600d03c5-ea7e-406e-a4e3-ee1e5e8916ed.jpg" class="img-responsive">
+            </a>
+        </div>
     </div>
     <div class="my-center uk-margin-medium-top">
         <a class="more-photos" href="#">مشاهده تمام عکس ها</a>
